# mohflow

./: .codecov.yml  .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TECHNICAL_PLAN.md  TESTING.md  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt  test_ci_debug.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
benchmarks/: README.md  performance_benchmark.py  requirements.txt  run_benchmarks.py  test_opentelemetry.py  test_performance.py  test_production_benchmark.py
examples/: auto_metrics_demo.py  comprehensive_benchmark.py  context_management_demo.py  framework_detection_example.py  framework_integrations_demo.py  opentelemetry_example.py  performance_comparison.py  privacy_pii_example.py  sampling_demo.py
scripts/: build-ui.py  check_types.py  run_ui_tests.sh
specs/001-there-is-an/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-title-documentation-quality/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-title-release-mohflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-mohnitor-auto-spun/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/mohflow/: __init__.py  actions.py  anomaly.py  auto_config.py  cli.py  config.py  diagnose.py  (+9 more)
stubs/: requests.pyi
tests/: conftest.py  test_auto_config.py  test_cli.py  test_config.py  test_config_loader.py  test_integration.py  test_logger.py  test_templates.py
(+161 files in other folders)
