[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mohflow"
version = "0.1.0"
description = "Simple, powerful logging for Python applications"
authors = [{name = "Parijat Mukherjee", email = "parijat_mukherjee@live.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "python-logging-loki>=0.3.1",
    "python-json-logger>=2.0.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/parijatmukherjee/mohflow"
Repository = "https://github.com/parijatmukherjee/mohflow.git"